--- a/CardMemorize/src/main/AndroidManifest.xml
+++ b/CardMemorize/src/main/AndroidManifest.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.androidhuman.example.materialdrawer">
+<manifest
+    package="com.starnamu.cardmemorize"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.androidhuman.example.materialdrawer.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,5 +18,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".awakeprocess.AwakeService"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.starnamu.cardmemorize.awakeprocess.AwakeService" />
+            </intent-filter>
+        </service>
+        <receiver
+            android:name="com.starnamu.cardmemorize.awakeprocess.AwakeReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="com.starnamu.cardmemorize.awakeprocess.ACTION_START" />
+            </intent-filter>
+        </receiver>
     </application>
+
 </manifest>
